# Terrain-Mesh

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  vcpkg.json
demo/: README.md
include/algorithms/: Delaunay.h  TerrainMesher.h
include/data_structures/: Geometry.h  Heightmap.h
include/rendering/: Camera.h
shaders/: terrain.frag  terrain.vert
src/: Camera.cpp  Camera.h  DCEL.cpp  DCEL.h  Delaunay.cpp  Delaunay.h  Geometry.h  Heightmap.cpp  Heightmap.h  Renderer.cpp  Renderer.h  Ruppert.cpp  Ruppert.h  TerrainMesher.cpp  TerrainMesher.h  benchmark.py  main.cpp  testTerrain.py
src/algorithms/: Delaunay.cpp  TerrainMesher.cpp
src/data_structures/: DCEL.cpp  Heightmap.cpp
src/rendering/: Camera.cpp  Renderer.cpp
test/: benchmark.py  testTerrain.py
